--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@types/react-dom": "^18.3.0",
     "datocms-plugin-sdk": "^1.0.2",
     "datocms-react-ui": "^1.0.2",
+    "hex-color-to-color-name": "^1.0.2",
+    "polished": "^4.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
