--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hex-color-to-color-name": "^1.0.2",
     "polished": "^4.3.1",
     "react": "^18.3.1",
+    "react-code-blocks": "^0.1.6",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5"
